--- a/Statinf/tp-1.html
+++ b/Statinf/tp-1.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-01-02" />
+<meta name="date" content="2020-01-03" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -499,7 +499,7 @@ Noir de jais
 <p>Nous souhaitons savoir si la couleur des cheveux est indépendante du sexe avec une erreur de première espèce <span class="math inline">\(5\%\)</span>. Si la couleur dépend du sexe, nous aimerions avoir une idée des couleurs qui sont les plus dépendantes du sexe.</p>
 <ol style="list-style-type: decimal">
 <li>Saisir les données.</li>
-<li>Visulaiser les données. (On pourra faire des diagrammes en bâtons)</li>
+<li>Visualiser les données. (On pourra faire des diagrammes en bâtons)</li>
 <li>Construire le test du <span class="math inline">\(\chi^2\)</span> d’indépendance manuellement, en calculant les profils lignes et les profils colonnes, la statistique du test et la valuer critique afin de prendre une décision. Que concluez vous?</li>
 <li>Retrouver les résultats du test en construisant le test du <span class="math inline">\(\chi^2\)</span> d’indépendance avec la fonction <code>chisq.test()</code>.</li>
 <li>Calculer les contributions au <span class="math inline">\(\chi^2\)</span> pour savoir qui sont les combinaisons qui contribuent le plus à la non-dépendance des deux variables.</li>
