--- a/Statinf/tests-de-khi-deux-chi2.html
+++ b/Statinf/tests-de-khi-deux-chi2.html
@@ -440,12 +440,12 @@ connaisse pas la distribution de probabilité de la variable aléatoire étudié
 désire tester l’hypothèse que <span class="math inline">\(X\)</span> suit une loi de probabilité particulière. On veut, par exemple,
 tester l’hypothèse que <span class="math inline">\(X\)</span> suit la loi normale. Un graphique quantile-quantile (<strong>qqplot</strong>) peut nous donner une première idée de la réponse à cette question. Dans cette section, on décrira une procédure formelle de test d’ajustement basée sur la loi du <span class="math inline">\(\chi^2\)</span>.</p>
 <p><strong>La procédure du test</strong></p>
-<p>La procédure de test requiert un échantillon aléatoire de taille <span class="math inline">\(n\)</span> de la variable aléatoire
+<p>La procédure du test requiert un échantillon aléatoire de taille <span class="math inline">\(n\)</span> de la variable aléatoire
 <span class="math inline">\(X\)</span>, dont la fonction de densité de probabilité est inconnue. Ces <span class="math inline">\(n\)</span> observations sont disposées dans un tableau de fréquences ayant <span class="math inline">\(k\)</span> classes. Soit <span class="math inline">\(O_{i}\)</span> la fréquence observée dans la
 <span class="math inline">\(i\)</span>-ième classe. A l’aide de la distribution hypothétique de probabilité, on calcule la fréquence
 espérée dans la <span class="math inline">\(i\)</span>-ième classe <span class="math inline">\(E_{i}\)</span>. (Notons que les fréquences espérées ne sont pas
 nécessairement des nombres entiers, et qu’elles n’ont pas à être arrondies puisqu’il s’agit
-d’espérances.)</p>
+d’espérances).</p>
 <p>Pour tester les hypothèses
 <span class="math display">\[
 \begin{aligned} 
@@ -455,9 +455,9 @@ d’espérances.)</p>
 \]</span></p>
 <p>La statistique du test est</p>
 <p><span class="math display">\[
-U_{0}=\sum_{i=1}^{k} \frac{\left(O_{i}-E_{i}\right)^{2}}{E_{i}}
-\]</span>
-Cette statistique peut être considérée comme une distance entre le modèle proposé et les
+U_{0}=\sum_{i=1}^{k} \frac{\left(O_{i}-E_{i}\right)^{2}}{E_{i}} = \sum_{i=1}^{k} \frac{\left(N_{i}-n p_{i}\right)^{2}}{np_{i}}
+\]</span></p>
+<p>Cette statistique peut être considérée comme une distance entre le modèle proposé et les
 quantités observées. On peut démontrer que <span class="math inline">\(U_{0}\)</span> suit approximativement la loi du <span class="math inline">\(\chi^2\)</span>
 avec <span class="math inline">\(k-p-1\)</span> degrés de liberté, où <span class="math inline">\(p\)</span> représente le nombre de paramètres de la distribution hypothétique estimée à partir de l’échantillon. Cette approximation s’améliore lorsque <span class="math inline">\(n\)</span> augmente.</p>
 <div class="rmdinsight">
