--- a/Statinf/tests-dhypotheses-sur-deux-echantillons.html
+++ b/Statinf/tests-dhypotheses-sur-deux-echantillons.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-01-03" />
+<meta name="date" content="2020-01-08" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -637,7 +637,7 @@ loi de Bernoulli et on comparera leurs paramètres. <span class="math inline">\(
 <p><span class="math display">\[
 \hat{p}_1-\hat{p}_2 \thicksim \mathcal{N}\big(0, p(1-p) \big[ \frac{1}{n_1} + \frac{1}{n_2} \big] \big)
 \]</span></p>
-<p>Un estimiateur du paramètre commun <span class="math inline">\(p\)</span> (qu’on pourrait appeler la “proportion du succès global”) est:</p>
+<p>Un estimateur du paramètre commun <span class="math inline">\(p\)</span> (qu’on pourrait appeler la “proportion du succès global”) est:</p>
 <p><span class="math display">\[
 \hat{p} = \frac{X_1 + X_2}{n_1+n_2}
 \]</span></p>
