--- a/Statinf/tests-dhypotheses.html
+++ b/Statinf/tests-dhypotheses.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-01-03" />
+<meta name="date" content="2020-01-08" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -573,7 +573,7 @@ Plus la conséquence de l’erreur est grave, plus <span class="math inline">\(\
 vu des observations <span class="math inline">\(x_1 ,\ldots,x_n\)</span>, sous la contrainte que la probabilité de rejeter à tort <span class="math inline">\(H_0\)</span> est égale à <span class="math inline">\(\alpha\)</span> fixé. Une idée naturelle est de conclure que <span class="math inline">\(H_0\)</span> est fausse s’il est très peu probable d’observer <span class="math inline">\(x_1 ,\ldots,x_n\)</span> quand <span class="math inline">\(H_0\)</span> est vraie.</p>
 <p>Par exemple, admettons que l’on doive décider si une pièce est truquée ou pas au vu
 de 100 lancers de cette pièce. Si on observe 90 piles, il est logique de conclure que la pièce est truquée et on pense avoir une faible probabilité de se tromper en concluant cela. Mais si on observe 65 piles, que conclure?</p>
-<p>Une fois que l’on a fixé raisonnablement <span class="math inline">\(\alpha\)</span>, il faut choisir une <strong>variable de décision</strong>, qui doit apporté le maximum d’information sur le problème posé, et dont la loi sera différente selon que <span class="math inline">\(H_0\)</span> ou <span class="math inline">\(H_1\)</span> est vraie. La loi sous <span class="math inline">\(H_0\)</span> doit
+<p>Une fois que l’on a fixé raisonnablement <span class="math inline">\(\alpha\)</span>, il faut choisir une <strong>variable de décision</strong>, qui doit apporter le maximum d’information sur le problème posé, et dont la loi sera différente selon que <span class="math inline">\(H_0\)</span> ou <span class="math inline">\(H_1\)</span> est vraie. La loi sous <span class="math inline">\(H_0\)</span> doit
 être connue. On définit alors la <strong>région critique</strong> qui est l’ensemble des valeurs de la variable de décision qui conduisent à rejeter <span class="math inline">\(H_0\)</span> au profit de <span class="math inline">\(H_1\)</span>. Sa forme est déterminée par la nature de <span class="math inline">\(H_1\)</span>, et sa détermination exacte est donnée par <span class="math inline">\(P(RC|H_0) = \alpha\)</span>. La région d’acceptation est son complémentaire <span class="math inline">\(\overline{RC}\)</span>.</p>
 <div class="rmdcaution">
 <p>Remarque: il vaut mieux dire “ne pas rejeter <span class="math inline">\(H_0\)</span>” que “accepter <span class="math inline">\(H_0\)</span>”. En effet, si on rejette <span class="math inline">\(H_0\)</span>, c’est que les observations sont telles qu’il est très improbable que <span class="math inline">\(H_0\)</span> soit vraie. Si on ne rejette pas <span class="math inline">\(H_0\)</span>, c’est qu’on ne dispose pas de critères suffisants pour pouvoir dire que <span class="math inline">\(H_0\)</span> est fausse. Mais cela ne veut pas dire que <span class="math inline">\(H_0\)</span> est vraie.</p>
