--- a/Statinf/exercices-6.html
+++ b/Statinf/exercices-6.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-01-14" />
+<meta name="date" content="2020-01-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -491,40 +491,78 @@ Total
 <tbody>
 <tr>
 <td style="text-align:left;">
-Fréquence observée, <span class="math inline">\(O_i\)</span>
+Effectif observé, <span class="math inline">\(N_i\)</span>
 </td>
 <td style="text-align:right;">
-94
+94.00
 </td>
 <td style="text-align:right;">
-93
+93.00
 </td>
 <td style="text-align:right;">
-112
+112.00
 </td>
 <td style="text-align:right;">
-101
+101.0
 </td>
 <td style="text-align:right;">
-104
+104.0
 </td>
 <td style="text-align:right;">
-95
+95.0
 </td>
 <td style="text-align:right;">
-100
+100.0
 </td>
 <td style="text-align:right;">
-99
+99.0
 </td>
 <td style="text-align:right;">
-108
+108.00
 </td>
 <td style="text-align:right;">
-94
+94.00
 </td>
 <td style="text-align:right;">
 1000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Fréquence observée, <span class="math inline">\(O_i\)</span>
+</td>
+<td style="text-align:right;">
+0.09
+</td>
+<td style="text-align:right;">
+0.09
+</td>
+<td style="text-align:right;">
+0.11
+</td>
+<td style="text-align:right;">
+0.1
+</td>
+<td style="text-align:right;">
+0.1
+</td>
+<td style="text-align:right;">
+0.1
+</td>
+<td style="text-align:right;">
+0.1
+</td>
+<td style="text-align:right;">
+0.1
+</td>
+<td style="text-align:right;">
+0.11
+</td>
+<td style="text-align:right;">
+0.09
+</td>
+<td style="text-align:right;">
+1
 </td>
 </tr>
 </tbody>
