--- a/Statinf/exercices-6.html
+++ b/Statinf/exercices-6.html
@@ -579,15 +579,15 @@ Le générateur de nombres aléatoires fonctionne-t-il correctement au seuil de 
 <div class="exercise">
 <p><span id="exr:unnamed-chunk-222" class="exercise"><strong>Exercice 7.2  </strong></span>On souhaite tester l’hypothèse selon laquelle le nombre de défauts sur des cartes de circuit imprimé suit une loi de Poisson. On collecte un échantillon aléatoire de <span class="math inline">\(n=60\)</span> cartes de circuit imprimé et on observe le nombre de défauts. On obtient les données suivantes:</p>
 <center>
-<table style="width:57%;">
+<table style="width:56%;">
 <colgroup>
 <col width="27%" />
-<col width="29%" />
+<col width="27%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="center">Nombre de défauts</th>
-<th align="center">Fréquence observée</th>
+<th align="center">Effectif observé</th>
 </tr>
 </thead>
 <tbody>
