--- a/Statinf/tests-de-khi-deux-chi2.html
+++ b/Statinf/tests-de-khi-deux-chi2.html
@@ -455,7 +455,7 @@ d’espérances).</p>
 \]</span></p>
 <p>La statistique du test est</p>
 <p><span class="math display">\[
-U_{0}=\sum_{i=1}^{k} \frac{\left(O_{i}-E_{i}\right)^{2}}{E_{i}} = \sum_{i=1}^{k} \frac{\left(N_{i}-n p_{i}\right)^{2}}{np_{i}}
+U_{0}= n \sum_{i=1}^{k} \frac{\left(O_{i}-E_{i}\right)^{2}}{E_{i}} = \sum_{i=1}^{k} \frac{\left(N_{i}-n p_{i}\right)^{2}}{np_{i}}
 \]</span></p>
 <p>Cette statistique peut être considérée comme une distance entre le modèle proposé et les
 quantités observées. On peut démontrer que <span class="math inline">\(U_{0}\)</span> suit approximativement la loi du <span class="math inline">\(\chi^2\)</span>
