--- a/Statinf/tests-dhypotheses-sur-deux-echantillons.html
+++ b/Statinf/tests-dhypotheses-sur-deux-echantillons.html
@@ -548,8 +548,8 @@ f_0 &gt; f_{1-\alpha; \, n_1-1,n_2-1}
 H_{0}: m_1 = m_2 \text { contre } H_{1}: m_1 \neq m_2
 \]</span></p>
 <p>La procédure de ce test repose sur la distribution de la différence des moyennes des échantillons, <span class="math inline">\(\overline{X}_1 - \overline{X}_2\)</span>. On peut résumer la situation ainsi:</p>
-<pre><code>#ans&gt; Warning in if (bs) {: la condition a une longueur &gt; 1 et seul le premier
-#ans&gt; élément est utilisé</code></pre>
+<pre><code>#ans&gt; Warning in if (bs) {: the condition has length &gt; 1 and only the first
+#ans&gt; element will be used</code></pre>
 <table class="table table-striped table-condensed" style="width: auto !important; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr>
