--- a/Statinf/echantillonnage-et-theoremes-limites.html
+++ b/Statinf/echantillonnage-et-theoremes-limites.html
@@ -583,12 +583,8 @@ càd <span class="math inline">\(P\big( \lim_{n \to \infty} \overline{X}_n = m\b
 <p>Et donc l’espérance de <span class="math inline">\(X\)</span> est <span class="math inline">\(E(X)=\sum_i p_i x_i = 3.5\)</span>. Pour illustrer le théorème on va procéder à un échantillonnage. On répète le lancement du dé <span class="math inline">\(n\)</span> fois. A chaque <span class="math inline">\(n\)</span> on va calculer la moyenne empirique des résultats obtenus, qu’on va noter <span class="math inline">\(\overline{X}_n\)</span>. Selon la loi de grands nombre cette moyenne va converger vers l’espérance théorique:</p>
 <p><span class="math display">\[\overline{X}_n \rightarrow E(X)=m=3.5 \quad \text{quand} \quad n \rightarrow \infty\]</span></p>
 <p>Traçons l’évolution de la moyenne empirique en fonction de la taille <span class="math inline">\(n\)</span> de l’échantillon, dans deux différents échantillonnages aléatoires:</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-100"></span>
-<img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-100-1.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" /><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-100-2.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" />
-<p class="caption">
-Figure 2.2: Convergence de <span class="math inline">\(\overline{X}_n\)</span> vers <span class="math inline">\(m=3.5\)</span> pour deux différents échantillonnages
-</p>
-</div>
+<pre><code>#ans&gt; Error in sample.int(length(x), size, replace, prob): invalid &#39;replace&#39; argument
+#ans&gt; Error in sample.int(length(x), size, replace, prob): invalid &#39;replace&#39; argument</code></pre>
 </div>
 <div id="theoreme-central-limite" class="section level3">
 <h3><span class="header-section-number">2.3.3</span> Théorème central limite</h3>
