--- a/Statinf/introduction.html
+++ b/Statinf/introduction.html
@@ -469,7 +469,42 @@ les sondages, aux sports, à l’assurance, et à toutes les recherches scientif
 souhaite évidemment avoir une évaluation de leur durée de vie, de la probabilité qu’elles
 fonctionnent correctement pendant plus d’un mois, un an, etc… Mais si l’on veut utiliser les résultats théoriques énoncés plus haut, il faut d’une part pouvoir s’assurer qu’on a choisi un bon modèle, c’est-à-dire que la durée de vie de ces ampoules est bien une variable aléatoire de loi exponentielle, et, d’autre part, pouvoir calculer d’une manière ou d’une autre la valeur du paramètre <span class="math inline">\(\lambda\)</span>. C’est la statistique qui va permettre de résoudre ces problèmes. Pour cela, il faut faire une expérimentation, recueillir des données et les analyser.</p>
 <p>On met donc en place ce qu’on appelle un <strong>essai</strong> ou une <strong>expérience</strong>. On fait fonctionner en parallèle et indépendamment les unes des autres <span class="math inline">\(n = 10\)</span> ampoules identiques, dans les mêmes conditions expérimentales, et on relève leurs durées de vie. Admettons que l’on obtienne les durées de vie suivantes, exprimées en heures :</p>
-<pre><code>#ans&gt; Error in knitr::kable(t(x)): cannot open file &#39;C:/Users/MG/Dropbox/ESILV19-20/Statistique_inferentielle/Cours_statistique_inferentielle/Statistique_inferentielle_cache/html/unnamed-chunk-21_1742792915b37b9dfb9e0cf46f76c437.rdb&#39;: No such file or directory</code></pre>
+<table>
+<tbody>
+<tr>
+<td style="text-align:right;">
+91.6
+</td>
+<td style="text-align:right;">
+35.7
+</td>
+<td style="text-align:right;">
+251
+</td>
+<td style="text-align:right;">
+24.3
+</td>
+<td style="text-align:right;">
+5.4
+</td>
+<td style="text-align:right;">
+67.3
+</td>
+<td style="text-align:right;">
+171
+</td>
+<td style="text-align:right;">
+9.5
+</td>
+<td style="text-align:right;">
+118
+</td>
+<td style="text-align:right;">
+57.1
+</td>
+</tr>
+</tbody>
+</table>
 <p>Notons <span class="math inline">\(x_1 ,\ldots,x_n\)</span> ces observations. Il est bien évident que la durée de vie des ampoules n’est pas prévisible avec certitude à l’avance. On va donc considérer que <span class="math inline">\(x_1 ,\ldots,x_n\)</span> sont les <strong>réalisations</strong> de variables aléatoires <span class="math inline">\(X_1 ,\ldots,X_n\)</span>. Cela signifie qu’avant l’expérience, la durée de vie de la <span class="math inline">\(i^{\text{ème}}\)</span> ampoule est inconnue et que l’on traduit cette incertitude en modélisant cette durée par une variable aléatoire <span class="math inline">\(X_i\)</span>. Mais après l’expérience, la durée de vie a été observée. Il n’y a donc plus d’incertitude, cette durée est égale au réel <span class="math inline">\(x_i\)</span>. On dit que <span class="math inline">\(x_i\)</span> est la réalisation de <span class="math inline">\(X_i\)</span> sur l’essai effectué.</p>
 <p>Puisque les ampoules sont identiques, il est naturel de supposer que les <span class="math inline">\(X_i\)</span> sont de
 même loi. Cela signifie qu’on observe plusieurs fois le même phénomène aléatoire. Mais le
