--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -752,10 +752,53 @@ Figure 1.2: Diagramme circulaire de la variable “couleur des yeux”
 <h4>Cas de variable quantitative discrète</h4>
 <p>La distribution de <span class="math inline">\(X\)</span> est fournie par le tableau des fréquences qui fait correspondre aux différentes valeurs (modalités) de la variable.</p>
 <p>Soit l’exemple suivant de nombre de personnes par ménage pour les 10 ménages suivants:</p>
-<pre><code>#ans&gt; Warning in knitr::kable(t(c(2, 3, 3, 3, 4, 5, 5, 5, 5, 6))): restarting
-#ans&gt; interrupted promise evaluation
-#ans&gt; Error in knitr::kable(t(c(2, 3, 3, 3, 4, 5, 5, 5, 5, 6))): cannot open file &#39;C:/Users/MG/Dropbox/ESILV19-20/Statistique_inferentielle/Cours_statistique_inferentielle/Statistique_inferentielle_cache/html/unnamed-chunk-21_1742792915b37b9dfb9e0cf46f76c437.rdb&#39;: No such file or directory</code></pre>
+<table>
+<tbody>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+6
+</td>
+</tr>
+</tbody>
+</table>
 <p>On peut représenter la série avec un diagramme en bâtons (vertical ou horizontal).</p>
+<pre><code>#ans&gt; Warning in if (horiz) {: the condition has length &gt; 1 and only the first
+#ans&gt; element will be used
+#ans&gt; Warning in if (horiz) par(xaxs = &quot;i&quot;, xpd = xpd) else par(yaxs = &quot;i&quot;, xpd =
+#ans&gt; xpd): the condition has length &gt; 1 and only the first element will be used
+#ans&gt; Warning in if (horizontal) rect(x1, y1, x2, y2, ...) else rect(y1, x1,
+#ans&gt; y2, : the condition has length &gt; 1 and only the first element will be used
+#ans&gt; Warning in if (horiz) 2 else 1: the condition has length &gt; 1 and only the
+#ans&gt; first element will be used
+#ans&gt; Warning in if (horiz) 1 else 2: the condition has length &gt; 1 and only the
+#ans&gt; first element will be used</code></pre>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-11"></span>
 <img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-11-1.png" alt="Le nombre de personnes par ménage" width="45%" /><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-11-2.png" alt="Le nombre de personnes par ménage" width="45%" />
 <p class="caption">
@@ -767,6 +810,8 @@ Figure 1.3: Le nombre de personnes par ménage
 <h4>Cas de variable quantitative continue</h4>
 <p>Pour la visualisation d’une série numérique, l’outil de base est l’histogramme, outil qui ressemble à un diagramme en bâtons mais qui doit en être distingué. Il repose sur une subdivision de la plage de variation de <span class="math inline">\(X\)</span> en intervalles; pour chaque intervalle <span class="math inline">\([a,b[\)</span> on compte le nombre d’individus tels que <span class="math inline">\(X \in [a,b[\)</span>, nombre dit effectif de l’intervalle.</p>
 <p>Dans l’histogramme, les intervalles sont représentés sur l’axe des abscisses. Au-dessus de chaque intervalle, on dessine un rectangle dont la surface est proportionnelle à son effectif. La base étant la longueur de l’intervalle, la hauteur de chaque rectangle s’interprète comme une densité (effectif par unité de longueur).</p>
+<pre><code>#ans&gt; Warning in if (bs) {: the condition has length &gt; 1 and only the first
+#ans&gt; element will be used</code></pre>
 <table class="kable_wrapper table" style="margin-left: auto; margin-right: auto;">
 <caption>
 <span id="tab:unnamed-chunk-12">Table 1.2: </span>Variable quantitative: données brutes (gauche) et agrégées (droite).
@@ -893,6 +938,8 @@ effectif
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-14-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Celà permet aussi de présenter la distribution de l’échantillon.</p>
 <p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relativespour pouvoir superposer facilement des distributions de référence.</p>
+<pre><code>#ans&gt; Warning in if (freq) x$counts else x$density: the condition has length &gt; 1
+#ans&gt; and only the first element will be used</code></pre>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-15-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>Une autre graphique à base des quartiles est la boîte à dispersion ou <strong>boîte à moustaches</strong> (<strong>boxplot</strong>). Un rectangle, délimité par les premier et troisième quartiles, représente <span class="math inline">\(50\%\)</span> de la population. Dans ce rectangle, une barre centrale représente la médiane. De part et d’autre du rectangle, on figure deux segments dont la longueur est environ 1.5 fois l’écart interquartile: “environ” car chaque segment est en fait délimité par une observation réelle incluse dans cet intervalle, celle qui est la plus éloignée de la médiane. Enfin, les observations au-delà de ces limites sont représentées individuellement.</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-16"></span>
@@ -938,9 +985,33 @@ Figure 1.4: Boîte à moustaches de Rythme cardiaque de 237 étudiants
 \overline{x}=\frac{1}{n} \sum_{i=1}^{n} x_{i}
 \]</span></p>
 <p>Exemple: Les notes d’un étudiant dans 7 matières sont:</p>
-<pre><code>#ans&gt; Warning in knitr::kable(t(c(18, 16, 15, 14, 12, 17, 11))): restarting
-#ans&gt; interrupted promise evaluation
-#ans&gt; Error in knitr::kable(t(c(18, 16, 15, 14, 12, 17, 11))): cannot open file &#39;C:/Users/MG/Dropbox/ESILV19-20/Statistique_inferentielle/Cours_statistique_inferentielle/Statistique_inferentielle_cache/html/unnamed-chunk-21_1742792915b37b9dfb9e0cf46f76c437.rdb&#39;: No such file or directory</code></pre>
+<table>
+<tbody>
+<tr>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:right;">
+16
+</td>
+<td style="text-align:right;">
+15
+</td>
+<td style="text-align:right;">
+14
+</td>
+<td style="text-align:right;">
+12
+</td>
+<td style="text-align:right;">
+17
+</td>
+<td style="text-align:right;">
+11
+</td>
+</tr>
+</tbody>
+</table>
 <p>La note moyenne est donc</p>
 <p><span class="math display">\[
 \overline{x}=\frac{18+16+15+14+12+17+11}{7}=14.71
@@ -952,6 +1023,8 @@ Figure 1.4: Boîte à moustaches de Rythme cardiaque de 237 étudiants
 \overline{x}=\frac{1}{n} \sum_{i=1}^{p} n_{i} x_{i}
 \]</span></p>
 <p>Exemple: Soit les notes obtenues par un élève au baccalauréat:</p>
+<pre><code>#ans&gt; Warning in if (bs) {: the condition has length &gt; 1 and only the first
+#ans&gt; element will be used</code></pre>
 <table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
