--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -934,6 +934,11 @@ effectif
 </table>
 <p>Le nombre de classes doit être choisi de façon à ce que l’effectif moyen par intervalle soit suffisamment grand afin de pas être gêné par des irrégularités locales et, au contraire, afin de mettre en évidence une tendance générale.</p>
 <p>Soit l’exemple suivant: on s’intéresse à la taille de 237 étudiants<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>.</p>
+<pre><code>#ans&gt; 
+#ans&gt; Attachement du package : &#39;MASS&#39;
+#ans&gt; The following object is masked from &#39;package:plotly&#39;:
+#ans&gt; 
+#ans&gt;     select</code></pre>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-14-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Celà permet aussi de présenter la distribution de l’échantillon.</p>
 <p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relativespour pouvoir superposer facilement des distributions de référence.</p>
