--- a/Statinf/variables-aléatoires-discrètes.html
+++ b/Statinf/variables-aléatoires-discrètes.html
@@ -826,6 +826,12 @@ la probabilité d’avoir exactement une pile.
      1 &amp; \quad \text{si $x \geq 3$}\\
 \end{array} \right.\]</span></p>
 <p>Le graphe de cette dernière est représentée dans la figure suivante:</p>
+<pre><code>#ans&gt; Warning: le package &#39;latex2exp&#39; a été compilé avec la version R 3.6.1
+#ans&gt; 
+#ans&gt; Attachement du package : &#39;latex2exp&#39;
+#ans&gt; The following object is masked from &#39;package:plotly&#39;:
+#ans&gt; 
+#ans&gt;     TeX</code></pre>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-234-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>Exemple:</strong> Soit <span class="math inline">\(A\)</span> un événement quelconque. On appelle variable aléatoire <em>indicatrice</em> de cet événement <span class="math inline">\(A\)</span>, la variable aléatoire définie par: <span class="math display">\[X(\omega) = \left\{ 
 \begin{array}{l l}
