--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-02-04" />
+<meta name="date" content="2020-03-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -439,7 +439,7 @@ code span.wa { color: #bf0303; } /* Warning */
 <div id="header">
 <h1 class="title">Statistique Inférentielle</h1>
 <p class="author"><em>Mohamad Ghassany</em></p>
-<p class="date"><em>2020-02-04</em></p>
+<p class="date"><em>2020-03-04</em></p>
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
@@ -447,6 +447,121 @@ code span.wa { color: #bf0303; } /* Warning */
 <!-- ([ESILV <i class="fas  fa-external-link-alt "></i>](https://www.esilv.fr/)).  -->
 <div id="plan-du-cours" class="section level2 unnumbered">
 <h2>Plan du cours</h2>
+<table class="table" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+Séance
+</th>
+<th style="text-align:left;">
+Contenu
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Séance 1
+</td>
+<td style="text-align:left;">
+Statistique descriptive, <br>
+<strong>TP</strong> Prise en main sur R
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 2
+</td>
+<td style="text-align:left;">
+Echantillonage, <br>
+Théorèmes limites, <br>
+lois des <span class="math inline">\(\overline{X}_n, S_n^2\)</span> et <span class="math inline">\(P_n\)</span>, <br>
+<strong>TP</strong> sur l’illustration des théorèmes limites
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 3
+</td>
+<td style="text-align:left;">
+Estimation ponctuelle et recherche d’estimateur, <br>
+Méthode des moments, <br>
+Méthode du maximum de vraissemblance
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 4
+</td>
+<td style="text-align:left;">
+Séance de <strong>TP</strong>: <br>
+Suite du TP sur les théorèmes limites, <br>
+TP sur l’estimation ponctuelle
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Contrôle continu
+</td>
+<td style="text-align:left;">
+<strong>Samedi</strong> le <strong>30 novembre 2019</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 5
+</td>
+<td style="text-align:left;">
+Estimation par <strong>Intervalle de Confiance</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 6
+</td>
+<td style="text-align:left;">
+Suite exercices IC et <strong>TP</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 7
+</td>
+<td style="text-align:left;">
+Tests d’Hypothèses: <br>
+Introduction <br>
+Tests d’hypothèses à partir d’un <strong>seul</strong> échantillon
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 8
+</td>
+<td style="text-align:left;">
+Tests d’hypothèses à partir de <strong>deux</strong> échantillons, <br>
+Exercices et <strong>TP</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Séance 9
+</td>
+<td style="text-align:left;">
+Test d’ajustement de <span class="math inline">\(\chi^2\)</span>, <br>
+Test d’indépendance de <span class="math inline">\(\chi^2\)</span>, <br>
+Exercices et <strong>TP</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Examen
+</td>
+<td style="text-align:left;">
+Semaine du 20 janvier 2020
+</td>
+</tr>
+</tbody>
+</table>
 
 </div>
 </div>
