--- a/Statinf/statistique-descriptive.html
+++ b/Statinf/statistique-descriptive.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-02-04" />
+<meta name="date" content="2020-03-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -943,7 +943,7 @@ effectif
 <p>L’idée de représenter en ordonnée la densité (et non l’effectif) permet de prendre en compte des intervalles de longueurs inégales, ce qui peut être nécessaire pour les intervalles extrêmes. Celà permet aussi de présenter la distribution de l’échantillon.</p>
 <p>Dans la figure précédente, nous avons utilisé des effectifs (fréquences absolues), on préfère généralement utiliser des fréquences relativespour pouvoir superposer facilement des distributions de référence.</p>
 <p><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-15-1.png" width="70%" style="display: block; margin: auto;" /></p>
-<p>Une autre graphique à base des quartiles est la boîte à dispersion ou <strong>boîte à moustaches</strong> (<strong>boxplot</strong>). Un rectangle, délimité par les premier et troisième quartiles, représente <span class="math inline">\(50\%\)</span> de la population. Dans ce rectangle, une barre centrale représente la médiane. De part et d’autre du rectangle, on figure deux segments dont la longueur est environ 1.5 fois l’écart interquartile: “environ” car chaque segment est en fait délimité par une observation réelle incluse dans cet intervalle, celle qui est la plus éloignée de la médiane. Enfin, les observations au-delà de ces limites sont représentées individuellement.</p>
+<p>Un autre graphique à base des quartiles est la boîte à dispersion ou <strong>boîte à moustaches</strong> (<strong>boxplot</strong>). Un rectangle, délimité par les premier et troisième quartiles, représente <span class="math inline">\(50\%\)</span> de la population. Dans ce rectangle, une barre centrale représente la médiane. De part et d’autre du rectangle, on figure deux segments dont la longueur est environ 1.5 fois l’écart interquartile: “environ” car chaque segment est en fait délimité par une observation réelle incluse dans cet intervalle, celle qui est la plus éloignée de la médiane. Enfin, les observations au-delà de ces limites sont représentées individuellement.</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-16"></span>
 <img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-16-1.png" alt="Boîte à moustaches de Rythme cardiaque de 237 étudiants" width="70%" />
 <p class="caption">
@@ -1258,7 +1258,7 @@ variables là que l’on représente (c’est en genéral cette seconde solution
 <div class="rmdtip">
 <p><strong>Rappel: variables centrées et réduites</strong></p>
 <p>Si <span class="math inline">\(X\)</span> est une variable quantitative de moyenne <span class="math inline">\(\overline{x}\)</span> et d’écart-type <span class="math inline">\(\sigma_{X},\)</span> on
-apelle variable centrée associée à <span class="math inline">\(X\)</span> la variable <span class="math inline">\(X-\overline{x}\)</span> (elle est de moyenne
+appelle variable centrée associée à <span class="math inline">\(X\)</span> la variable <span class="math inline">\(X-\overline{x}\)</span> (elle est de moyenne
 nulle et d’écart-type <span class="math inline">\(\sigma_{X}\)</span>), et variable centrée et réduite (ou tout simplement
 variable réduite) associe à <span class="math inline">\(X\)</span> la variable <span class="math inline">\(\frac{X-\overline{x}}{\sigma}\)</span> (elle est de moyene nulle et
 d’écart-type égal à un). Une variable centrée er réduite s’exprime sans unité.</p>
